# mission-mcp

./: .gitignore  README.md  conf.toml.example  docker-compose.yml  pyproject.toml
docker/: Dockerfile
openapi/: openapi.json
src/omnimission/: __init__.py  audit_cli.py  chroma_store.py  config.py  embeddings.py  export_openapi.py  ingest.py  mcp_server.py  mission_state.py  monitoring.py  policy.py  x402_ask.py  x402_preview.py
src/omnimission/api/: __init__.py  main.py  schemas.py
src/omnimission/crawler/: __init__.py  worker.py
src/omnimission/planner/: __init__.py  graph.py  service.py
tests/: test_ingest.py  test_metrics.py  test_planner.py
